feat: implement get physical instances