@@ -1,24 +1,30 @@
 package fr.insee.rmes.colectica.mock;
 
+import fr.insee.rmes.colectica.dto.QueryRequest;
 import fr.insee.rmes.colectica.mock.webservice.ColecticaMockResources;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.Import;
 import org.springframework.test.context.TestPropertySource;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 @SpringBootTest(classes = ColecticaMockControllerIntegrationTest.TestConfiguration.class)
-@TestPropertySource(properties = "fr.insee.rmes.bauhaus.colectica.mock-server-enabled=true")
+@TestPropertySource(properties = {
+    "fr.insee.rmes.bauhaus.colectica.mock-server-enabled=true",
+    "fr.insee.rmes.bauhaus.colectica.baseURI=http://localhost:8082/api/colectica",
+    "fr.insee.rmes.bauhaus.colectica.itemTypes=a51e85bb-6259-4488-8df2-f08cb43485f8"
+})
 class ColecticaMockControllerIntegrationTest {
 
     @Configuration
     @EnableAutoConfiguration
-    @Import(ColecticaMockResources.class)
+    @ComponentScan(basePackages = "fr.insee.rmes.colectica.mock")
     static class TestConfiguration {
     }
 
@@ -35,11 +41,19 @@ class ColecticaMockControllerIntegrationTest {
     @Test
     void shouldGetPhysicalInstances() {
         assertNotNull(controller);
-        var instances = controller.getPhysicalInstances();
-        assertNotNull(instances);
-        assertEquals(3, instances.size());
-        assertEquals("pi-1", instances.get(0).get("id"));
-        assertEquals("Physical Instance 1", instances.get(0).get("label"));
+        
+        // Create request body with itemTypes
+        QueryRequest queryRequest = new QueryRequest(List.of("a51e85bb-6259-4488-8df2-f08cb43485f8"));
+        
+        var response = controller.getPhysicalInstances(queryRequest);
+        assertNotNull(response);
+        assertNotNull(response.results());
+        assertFalse(response.results().isEmpty());
+        
+        // Verify first result has identifier and other expected fields
+        var firstItem = response.results().getFirst();
+        assertNotNull(firstItem.identifier());
+        assertNotNull(firstItem.itemName());
     }
 
     @Test
